# framework2

./: LICENSE  README.md  redgpu_f2.h  redgpu_f2dll.lib  shader_custom.frag.glsl  shader_custom.vert.glsl  shader_ssao.frag.glsl
libs_linux/: github_com_openframeworks_openFrameworks_releases_tag_0.12.0_of_v0.12.0_linux64gcc6_release_tar_gz.patch  install_dependencies_elementary_os_7.1.sh
source_code/redgpu_f2/: .gitignore  CMakeLists.txt  imgui-1.67-git-commits.txt  imgui-1.89.9-git-commits.txt  of_v0.12.0_vs_release_source.txt  redgpu_f2.cpp  redgpu_f2.vcxproj  redgpu_f2_compile.sh
source_code/redgpu_f2/addons/ofxAssimpModelLoader/libs/assimp/: source.txt
source_code/redgpu_f2/addons/ofxAssimpModelLoader/src/: ofxAssimpModelLoader.cpp
source_code/redgpu_f2/ofxaddons/ofxFBX/libs/libfbxsdk_2019.5/lib/vs/x64/Debug/: .gitignore
source_code/redgpu_f2/ofxaddons/ofxFBX/src/: ofxFBXMesh.cpp  ofxFBXNurbsCurve.cpp  ofxFBXSkeleton.h
source_code/redgpu_f2/ofxaddons/ofxFBX/src/FBXSource/: ofxFBXSrcMesh.cpp
source_code/redgpu_f2/ofxaddons/ofxFirstPersonCamera/src/: ofxFirstPersonCamera.cpp  ofxFirstPersonCamera.h
source_code/redgpu_f2/ofxaddons/ofxManipulator/src/: ofxManipulator.cpp  ofxManipulator.h
source_code/redgpu_f2/ofxaddons/ofxPostProcessing/: git_log.txt
source_code/redgpu_f2/ofxaddons/ofxPostProcessing/src/: PostProcessing.cpp  PostProcessing.h  SSAOPass.cpp  SSAOPass.h  ofxPostProcessing.h
source_code/redgpu_f2/ofxaddons/ofxPostProcessingExtra/: GenericPass.cpp  GenericPass.h
source_code/redgpu_f2/ofxaddons/ofxRaccoonImGui/libs/cimgui-1.89.9-44769f63d/: cimgui.cpp
source_code/redgpu_f2/ofxaddons/ofxRaccoonImGui/src/: ofxRaccoonImGui.cpp  ofxRaccoonImGui.hpp
source_code/redgpu_f2/src/json/include/: json.hpp
source_code/redgpu_f2/src/openframeworks/: ofMain.h
source_code/redgpu_f2/src/openframeworks/math/: ofMath.cpp
source_code/redgpu_f2/src/openframeworks/utils/: ofConstants.h  ofUtils.h
source_code/redgpu_f2/src/pugixml/lib/vs/x64/Release/: pugixml.lib
source_code/redgpu_f2/src/utf8cpp/include/utf8/: checked.h
